unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/litify_time__lit_Billing_Code__c.object-meta.xml
<CustomObject>
    <label>Billing Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>