unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_Billing_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Code_Name__c</fullName>
    <label>Billing Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>