unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_Is_Phase__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Is_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phase</label>
    <type>Checkbox</type>
</CustomField>