unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_Phase__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Phases are optional and can be utilized to organize billing codes within a Phase</inlineHelpText>
    <label>Phase</label>
    <referenceTo>litify_time__lit_Billing_Code__c</referenceTo>
    <relationshipLabel>Billing Codes</relationshipLabel>
    <relationshipName>Billing_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>