unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_Set__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Set__c</fullName>
    <label>Set</label>
    <referenceTo>litify_time__lit_Billing_Code_Set__c</referenceTo>
    <relationshipLabel>Billing Codes</relationshipLabel>
    <relationshipName>Billing_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>