unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Type__c</fullName>
    <formula>TEXT(litify_time__lit_Set__r.litify_time__lit_Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>