unpackaged/main/default/objects/litify_time__lit_Billing_Code__c/fields/litify_time__lit_UTBMS__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_UTBMS__c</fullName>
    <label>UTBMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>